--- a/common/common.scss
+++ b/common/common.scss
@@ -1,109 +1,187 @@
 .homepage-featured-topics {
-  #main-outlet {
-    padding-top: 1.5em;
-    @media screen and (max-width: 450px) {
-      padding-top: 0.5em;
+    #main-outlet {
+        padding-top: 1.5em;
+
+        @media screen and (max-width: 450px) {
+            padding-top: 0.5em;
+        }
     }
-  }
 }
 
 .featured-topic-wrapper {
-  margin-top: 6em;
-  text-align: center;
-  border-bottom: 1px solid $primary-low;
-  position: relative;
-  min-height: 350px;
-  .spinner {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 125px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  @media screen and (max-width: 450px) {
-    margin-top: 5em;
-  }
-  h2 {
-    border-bottom: 1px solid $primary-low;
-    padding-bottom: 0.5em;
-    margin-bottom: 1.5em;
-  }
-  .featured-topics {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    @media screen and (max-width: 600px) {
-      flex-wrap: wrap;
+    margin-top: 6em;
+    text-align: left;
+    position: relative;
+    min-height: 350px;
+
+    .spinner {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 125px;
+        margin-left: auto;
+        margin-right: auto;
     }
-    .featured-topic {
-      flex: 1 1 30%;
-      max-width: 500px;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
 
-      @media screen and (min-width: 650px) {
-        &:first-of-type:not(:last-of-type) {
-          margin-right: 1.5em;
-        }
-
-        &:last-of-type:not(:first-of-type) {
-          margin-left: 1.5em;
-        }
-      }
-
-      @media screen and (max-width: 600px) {
-        width: 100%;
-        &:nth-of-type(3) {
-          display: none;
-        }
-      }
-      @media screen and (max-width: 450px) {
-        width: 100%;
-        &:nth-of-type(2) {
-          display: none;
-        }
-        &:nth-of-type(3) {
-          display: none;
-        }
-      }
-      h3 {
-        margin: 0;
-        padding: 1em 0 1.5em;
-        font-size: $font-up-2;
-        a {
-          display: -webkit-box;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          word-wrap: break-word;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-        }
-        @media screen and (max-width: 450px) {
-          padding: 1em 0 1em;
-        }
-      }
-      .featured-topic-image {
-        height: 200px;
-        max-width: 450px;
-        width: 100%;
-        background-size: cover;
-        background-position: center center;
-        a {
-          display: block;
-          width: 100%;
-          height: 100%;
-        }
-      }
+    @media screen and (max-width: 450px) {
+        margin-top: 5em;
     }
-  }
+
+    h2 {
+        border-bottom: 1px solid $primary-low;
+        padding-bottom: 0.5em;
+        margin-bottom: 1em;
+    }
+
+    .featured-topics {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 140px 140px 140px;
+        grid-row-gap: 25px;
+        grid-column-gap: 30px;
+
+        @media screen and (max-width: 600px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            grid-row-gap: 10px;
+        }
+
+        .featured-topic {
+            display: flex;
+            flex-wrap: wrap;
+            background: rgba(255, 255, 255, 0.893229);
+            box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
+            -webkit-box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
+            -moz-box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
+            border-radius: 8px;
+            -webkit-border-radius: 8px;
+            position: relative;
+            overflow: hidden;
+
+
+            @media screen and (min-width: 650px) {
+                &:first-of-type:not(:last-of-type) {
+                    border-radius: 12px;
+                    min-height: 472px;
+                    line-height: 24px;
+                    grid-row: 1 /span 3;
+                    border-radius: 0 0 12px 12px;
+
+                    .featured-topic-image {
+                        -webkit-box-flex: 0;
+                        -ms-flex: 0 0 100%;
+                        flex: 0 0 100%;
+                        max-width: 100%;
+                        width: 100%;
+                        height: 335px;
+                        border-radius: 0;
+                    }
+
+                    .featured-topic-meta {
+                        padding: 10px 20px 0px 30px;
+                        color: #0C0033;
+
+                        h3.featured-topic-title {
+                            font-size: $font-up-2;
+                            font-weight: 500;
+                        }
+                    }
+                }
+
+                &:last-of-type:not(:first-of-type) {}
+            }
+
+            @media screen and (max-width: 600px) {
+                width: 100%;
+                border-radius: 0;
+
+                .featured-topic-image {
+                    border-radius: 0;
+                }
+            }
+
+            @media screen and (max-width: 450px) {
+                width: 100%;
+            }
+
+            .featured-topic-meta {
+                flex-basis: 0;
+                -webkit-box-flex: 1;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                max-width: 100%;
+                padding: 10px 56px 0 30px;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 16px;
+                color: #252525;
+
+
+                h3.featured-topic-title {
+                    font-size: $font-up-1;
+                    line-height: 22px;
+                    word-break: break-word;
+                    padding-bottom: 10px;
+                    margin-bottom: 0;
+
+                    a {
+                        color: #0c0033;
+                        display: -webkit-box;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        word-wrap: break-word;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                    }
+
+                    @media screen and (max-width: 450px) {}
+                }
+
+                @media screen and (max-width: 600px) {
+                    padding: 10px 15px 0 15px;
+                }
+
+            }
+
+            .featured-topic-image {
+                background-size: cover;
+                background-position: center center;
+                font-size: 0%;
+                line-height: 0%;
+                flex-basis: 0;
+                -webkit-box-flex: 1;
+                -ms-flex-positive: 1;
+                flex-grow: 1;
+                max-width: 100%;
+                border-radius: 12px 0 0px 12px;
+                -webkit-border-radius: 12px 0 0px 12px;
+                -moz-border-radius: 12px 0 0px 12px;
+                width: 100%;
+                height: 140px;
+
+                a {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
+
+                @media screen and (max-width: 600px) {
+                    -webkit-box-flex: 0;
+                    -ms-flex: 0 0 33.333333%;
+                    flex: 0 0 33.333333%;
+                    max-width: 33.333333%;
+                    height: 120px;
+                    border-radius: 0;
+                }
+            }
+        }
+    }
 }
 
 body:not(.staff) {
-  .tag-drop li[data-name="#{$featured-tag}"],
-  [data-tag-name="#{$featured-tag}"] {
-    display: none;
-  }
+
+    .tag-drop li[data-name="#{$featured-tag}"],
+    [data-tag-name="#{$featured-tag}"] {
+        display: none;
+    }
 }
