--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -8,8 +8,8 @@
           {{/if}}
           {{conditional-loading-spinner condition=loadingFeatures}}
           <div class="featured-topics">
-            {{#each customFeaturedTopics as |t|}}
-              <div class="featured-topic">
+            {{#each (customFeaturedTopics, t=value num=index) }}
+              <div class="featured-topic" data-index="{{num}}">
                 <div class="featured-topic-image" style="background-image: url({{t.image_url}})">
                   <a href="/t/{{t.slug}}"></a>
                 </div>
