--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -8,8 +8,8 @@
           {{/if}}
           {{conditional-loading-spinner condition=loadingFeatures}}
           <div class="featured-topics">
-            {{#each (customFeaturedTopics, t=value num=index) }}
-              <div class="featured-topic" data-index="{{num}}">
+            {{#each customFeaturedTopics as |t|}}
+              <div class="featured-topic" data-index="{{@index}}">
                 <div class="featured-topic-image" style="background-image: url({{t.image_url}})">
                   <a href="/t/{{t.slug}}"></a>
                 </div>
@@ -22,6 +22,42 @@
             {{/each}}
           </div>
         </div>
+        <div class="latest-topic-wrapper">
+          {{conditional-loading-spinner condition=loadingFeatures}}
+            <div class="b-grid b-page__grid">
+              <div class="b-grid b-grid__cols2">
+                {{#each customLatestTopics as |t|}}
+                <div data-index="{{@index}}" class="b-brief b-grid__brief  b-grid__cols2  b-grid__rows4" style="color: #3c508a;">
+                  <div class="b-meta b-brief__meta is-color">
+                    <h3 class="b-meta__title b-brief__hot dt-clamp dt-clamp-3">{{topic-link t}}</h3>
+                    <div class="b-meta__text dt-clamp dt-clamp-3">{{raw "list/topic-excerpt" topic=t}}</div>
+                    <div class="b-meta__labels">
+                      <span>{{format-date t.bumpedAt format="medium-with-ago" noTitle="true"}}</span>
+                    </div>
+                  </div>
+                  <div class="b-brief__image">
+                    <img src="{{t.image_url}}">
+                  </div>
+                </div>
+                {{/each}}
+              </div>
+              <div class="b-grid b-grid__cols2">
+              {{#each customLatestTopics as |t|}}
+              <div data-index="{{@index}}" class="b-snippet b-grid__snippet  b-grid__cols2  b-grid__rows2">
+                <div class="b-meta b-snippet__meta">
+                  <h3 class="b-meta__title b-brief__hot dt-clamp dt-clamp-2">{{topic-link t}}</h3>
+                  <div class="b-meta__labels">
+                    <span>{{format-date t.bumpedAt format="medium-with-ago" noTitle="true"}}</span>
+                  </div>
+                </div>
+                <div class="b-snippet__image">
+                  <img src="{{t.image_url}}">
+                </div>
+              </div>
+              {{/each}}
+            </div>
+          </div>
+        </div>   
       </div>
     </div>
   {{/if}}
