--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -1,34 +1,37 @@
+{{#if (theme-setting "show_category_list")}}
+<div class="category-homepage-wrapper">
+  <div class="category-wapper wrap">
+    <div class="category-grid">
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/2/290dc389bed49ddba73fe82d7a7cbd228e716cdb.svg')">
+        <a href="https://thuvienmuasam.com/c/goi-y/8" class="category-link">Gợi ý</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/0/03e78f9b51c73772bd0a20c470cd12d86d2067de.svg')">
+        <a href="https://thuvienmuasam.com/c/ma-giam-gia/7" class="category-link">Mã giảm giá</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/c/c35592439129afb56dd99833a2ef7b3b4f087b35.svg')">
+        <a href="https://thuvienmuasam.com/c/khuyen-mai/6" class="category-link">Khuyến mãi</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/e/e331076d07d720e4b55941f0f2e296748f6af876.svg')">
+        <a href="https://thuvienmuasam.com/c/huong-dan-mua-sam/9" class="category-link">Hướng dẫn mua sắm</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/1X/60c836dbafec0293b278d63450cfb005139b1048.svg')">
+        <a href="https://thuvienmuasam.com/c/thuong-hieu/22" class="category-link">Thương hiệu</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/3/39c19d0c5d933983d8dea8c2394f0529749ba414.svg')">
+        <a href="https://thuvienmuasam.com/c/mua-sam-hoan-tien/16" class="category-link">Mua sắm hoàn tiền</a>
+      </div>
+      <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/c/cf7b74bbfa110c6024e723f3e7dbbf44bfa72716.svg')">
+        <a href="https://thuvienmuasam.com/c/hoi-dap/10" class="category-link">Hỏi đáp</a>
+      </div>
+    </div>
+  </div>
+</div>
+{{/if}}
+
 {{#if showFor}}
   {{#if displayHomepageFeatured}}
     <div class="custom-homepage-wrapper">
       <div class="wrap custom-homepage">
-        {{#if (theme-setting "show_category_list")}}
-        <div class="category-wapper">
-          <div class="category-grid">
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/2/290dc389bed49ddba73fe82d7a7cbd228e716cdb.svg')">
-              <a href="https://thuvienmuasam.com/c/goi-y/8" class="category-link">Gợi ý</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/0/03e78f9b51c73772bd0a20c470cd12d86d2067de.svg')">
-              <a href="https://thuvienmuasam.com/c/ma-giam-gia/7" class="category-link">Mã giảm giá</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/c/c35592439129afb56dd99833a2ef7b3b4f087b35.svg')">
-              <a href="https://thuvienmuasam.com/c/khuyen-mai/6" class="category-link">Khuyến mãi</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/e/e331076d07d720e4b55941f0f2e296748f6af876.svg')">
-              <a href="https://thuvienmuasam.com/c/huong-dan-mua-sam/9" class="category-link">Hướng dẫn mua sắm</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/1X/60c836dbafec0293b278d63450cfb005139b1048.svg')">
-              <a href="https://thuvienmuasam.com/c/thuong-hieu/22" class="category-link">Thương hiệu</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/3/39c19d0c5d933983d8dea8c2394f0529749ba414.svg')">
-              <a href="https://thuvienmuasam.com/c/mua-sam-hoan-tien/16" class="category-link">Mua sắm hoàn tiền</a>
-            </div>
-            <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/c/cf7b74bbfa110c6024e723f3e7dbbf44bfa72716.svg')">
-              <a href="https://thuvienmuasam.com/c/hoi-dap/10" class="category-link">Hỏi đáp</a>
-            </div>
-          </div>
-        </div>
-        {{/if}}
         <div class="featured-topic-wrapper">
           {{#if (theme-setting "show_title")}}
             {{titleElement}}
