--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -3,9 +3,12 @@
   <div class="category-wapper wrap">
     <div class="b-sub" style="display: none">
       <ul class="b-sub__items-0 h-nav-sub-items">
-        {{#each featuredCategories as |c|}}
-        <li class="b-sub__item-0">{{category-title-link category=c}}</li>
-        {{/each}}
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="">ABC</a></li>
       </ul>
     </div>
     <div class="category-grid">
