--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -3,12 +3,14 @@
   <div class="category-wapper wrap">
     <div class="b-sub" style="display: none">
       <ul class="b-sub__items-0 h-nav-sub-items">
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
-        <li class="b-sub__item-0"><a href="">ABC</a></li>
+        <li class="b-sub__item-0"><a href="#!">Danh mục: </a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/goi-y/8">Gợi ý</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/huong-dan-mua-sam/9">Hướng dẫn mua sắm</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/ma-giam-gia/7">Mã giảm giá</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/khuyen-mai/6">Khuyến mãi</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/thuong-hieu/22">Thương hiệu</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/mua-sam-hoan-tien/16">Mua sắm hoàn tiền</a></li>
+        <li class="b-sub__item-0"><a href="https://thuvienmuasam.com/c/hoi-dap/10">Hỏi đáp</a></li>
       </ul>
     </div>
     <div class="category-grid">
@@ -31,7 +33,7 @@
         <a href="https://thuvienmuasam.com/c/mua-sam-hoan-tien/16" class="category-link">Mua sắm hoàn tiền</a>
       </div>
       <div class="cactegory-item cactegory-item-bg" style="background-image: url('https://thuvienmuasam.com/uploads/default/original/2X/c/cf7b74bbfa110c6024e723f3e7dbbf44bfa72716.svg')">
-        <a href="https://thuvienmuasam.com/c/hoi-dap/10" class="category-link">Hỏi đáp</a>
+        <a href="" class="category-link">Hỏi đáp</a>
       </div>
     </div>
   </div>
