--- a/common/common.scss
+++ b/common/common.scss
@@ -8,104 +8,70 @@
 .custom-homepage-wrapper{
     background-color: #F5F5F5;
 }
-.b-sub {
-    background: #fff;
-    color: #252a2e;
-    font-size: 3.6vw;
-    height: 12vw;
-    overflow: hidden;
-    padding: 0 4vw;
-    position: relative;
-    &:after {
-        background: linear-gradient(90deg,hsla(0,0%,100%,0),#fff);
-        bottom: 0;
-        content: "";
-        pointer-events: none;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 40vw;
-        @media (min-width: 610px){
-            width: 250px;
-        }
-    }
-    .b-sub__items-0 {
-        overflow-x: auto;
-        overflow-y: hidden;
-        -webkit-overflow-scrolling: touch;
-        -webkit-transform: translateZ(0);
-        display: flex;
-        font-weight: 700;
-        height: 200%;
-        line-height: 12vw;
-        text-transform: uppercase;
-        white-space: nowrap;
-        list-style-type: none;
-        padding: 0;
-        @media (min-width: 610px){
-            line-height: 45px;
-        }
-        a[href="#!"] {
-            color: #0095da;
-            pointer-events: none;
-            text-decoration: none;
-            text-transform: none;
-        }
-        a{color: 252a2e}
-
-    }
-    @media (min-width: 610px){
-        font-size: 14px;
-        height: 45px;
-        padding: 0 20px;
-    }
-}
-.b-sub__item-0:not(:first-child) {
-    margin-left: 5.3333333vw;
-    @media (min-width: 610px){
-        margin-left: 32px;
-    }
-}
 .category-homepage-wrapper{
-    padding-top: 5em;
+    padding-top: 4em;
     padding-bottom: 1em;
     background-color: #F5F5F5;
     .category-wapper {
         margin: 0px auto;
-        .category-grid {
-            display: grid;
-            grid-auto-rows: minmax(150px, max-content);
-            grid-column-gap: 10px;
-            grid-row-gap: 10px;
-            overflow-x: auto;
-            grid-template-columns: repeat(auto-fill,minmax(150px,1fr));
-            grid-auto-flow: column;
-            grid-auto-columns: minmax(150px,1fr);
-            -webkit-overflow-scrolling: touch;
-            scroll-behavior: smooth;
-            -ms-overflow-style: none;
-            &:-webkit-scrollbar{display:none}
-            .cactegory-item-bg {
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-             .cactegory-item {
-                position: relative;
-                 a.category-link {
-                    position: absolute;
-                    font-size: 0;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
+        .b-sub {
+            background: #fff;
+            color: #252a2e;
+            font-size: 3.6vw;
+            height: 12vw;
+            overflow: hidden;
+            padding: 0 4vw;
+            position: relative;
+            &:after {
+                background: linear-gradient(90deg,hsla(0,0%,100%,0),#fff);
+                bottom: 0;
+                content: "";
+                pointer-events: none;
+                position: absolute;
+                right: 0;
+                top: 0;
+                width: 40vw;
+                @media (min-width: 610px){
+                    width: 250px;
                 }
             }
+            .b-sub__items-0 {
+                overflow-x: auto;
+                overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
+                -webkit-transform: translateZ(0);
+                display: flex;
+                font-weight: 700;
+                height: 200%;
+                line-height: 12vw;
+                text-transform: uppercase;
+                white-space: nowrap;
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                @media (min-width: 610px){
+                    line-height: 45px;
+                }
+                a[href="#!"] {
+                    color: #0095da;
+                    pointer-events: none;
+                    text-decoration: none;
+                    text-transform: none;
+                }
+                a{color: inherit}
+
+            }
+            @media (min-width: 610px){
+                font-size: 14px;
+                height: 45px;
+                padding: 0 20px;
+            }
         }
-        @media (max-width: 610px){
-            grid-auto-rows: minmax(100px, max-content);
-            grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
-            grid-auto-columns: minmax(100px,1fr);
+        .b-sub__item-0:not(:first-child) {
+            margin-left: 5.3333333vw;
+            @media (min-width: 610px){
+                margin-left: 32px;
+            }
         }
     }
 }
