--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -1,4 +1,5 @@
 {{#if (theme-setting "show_category_list")}}
+{{#if displayHomepageFeatured}}
 <div class="category-homepage-wrapper">
   <div class="category-wapper">
     <div class="b-sub">
@@ -15,6 +16,7 @@
     </div>
   </div>
 </div>
+{{/if}}
 {{/if}}
 
 {{#if showFor}}
