--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -31,11 +31,7 @@
           <div class="featured-topics">
             {{#each customFeaturedTopics as |t|}}
               <div class="featured-topic" data-index="{{@index}}">
-                {{#if t.thumbnails.retina}}
                 <div class="featured-topic-image" style="background-image: url({{t.thumbnails.retina}})">
-                {{else}}
-                <div class="featured-topic-image" style="background-image: url('')">
-                {{/if}}
                   <a href="/t/{{t.slug}}"></a>
                 </div>
                 <div class="featured-topic-meta">
@@ -61,11 +57,7 @@
                     </div>
                   </div>
                   <div class="b-brief__image">
-                    {{#if t.thumbnails.retina}}
-                      <img class="d-lazyload" src="{{t.thumbnails.retina}}">
-                    {{else}}
-                      <img class="d-lazyload" src="https://thuvienmuasam.com/uploads/default/original/1X/3db89f04fa083ed69d132f9f3ea4c3506317829c.png">
-                    {{/if}}
+                    <img class="d-lazyload" src="{{t.image_url}}">
                   </div>
                 </div>
                 {{/each}}
@@ -80,11 +72,7 @@
                   </div>
                 </div>
                 <div class="b-snippet__image">
-                  {{#if t.thumbnails.retina}}
-                  <img src="{{t.thumbnails.retina}}">
-                  {{else}}
-                  <img src="https://thuvienmuasam.com/uploads/default/original/1X/3db89f04fa083ed69d132f9f3ea4c3506317829c.png">
-                  {{/if}}
+                  <img src="{{t.image_url}}">
                 </div>
               </div>
               {{/each}}
