--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -31,7 +31,7 @@
           <div class="featured-topics">
             {{#each customFeaturedTopics as |t|}}
               <div class="featured-topic" data-index="{{@index}}">
-                {{raw "list/topic-thumbnail" topic=t thumbnails=thumbnails category=category opts=thumbnailOpts}}
+                {{raw "list/topic-thumbnail" topic=t thumbnails=t.thumbnails category=t.category opts=t.thumbnailOpts}}
                 <div class="featured-topic-image" style="background-image: url({{t.thumbnails.retina}})">
                   <a href="/t/{{t.slug}}"></a>
                 </div>
