--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -31,7 +31,7 @@
           <div class="featured-topics">
             {{#each customFeaturedTopics as |t|}}
               <div class="featured-topic" data-index="{{@index}}">
-                <div class="featured-topic-image" style="background-image: url({{t.thumbnails.retina}})">
+                <div class="featured-topic-image" style="background-image: url({{t.image_url}})">
                   <a href="/t/{{t.slug}}"></a>
                 </div>
                 <div class="featured-topic-meta">
