--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -32,7 +32,15 @@
             {{#each customFeaturedTopics as |t|}}
               <div class="featured-topic" data-index="{{@index}}">
                 <div class="featured-topic-image" style="background-image: url({{t.image_url}})">
-                  <a href="/t/{{t.slug}}"></a>
+                  <a href="/t/{{t.slug}}">
+                    <img class="featured-topic-thumbnail" 
+                        src="{{t.thumbnails[1].url}}" 
+                        srcset="{{t.thumbnails[0].url}}" 
+                        width={{t.thumbnails[0].width}}
+                        height={{t.thumbnails[0].height}}
+                        loading="lazy"
+                      />
+                  </a>
                 </div>
                 <div class="featured-topic-meta">
                   <h5 class="featured-topic-category-name">{{category-link t.category}}</h5>
