--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -34,10 +34,10 @@
                 <div class="featured-topic-image" style="background-image: url({{t.image_url}})">
                   <a href="/t/{{t.slug}}">
                     <img class="featured-topic-thumbnail" 
-                        src="{{t.thumbnails[1].url}}" 
-                        srcset="{{t.thumbnails[0].url}}" 
-                        width={{t.thumbnails[0].width}}
-                        height={{t.thumbnails[0].height}}
+                        src="{{t.thumbnails.1.url}}"
+                        srcset="{{t.thumbnails.0.url}}" 
+                        width={{t.thumbnails.0.width}}
+                        height={{t.thumbnails.0.height}}
                         loading="lazy"
                       />
                   </a>
