--- a/common/common.scss
+++ b/common/common.scss
@@ -256,7 +256,7 @@ body:not(.staff) {
                     height: 120px;
                     border-radius: 0;
                 }
-                .img.featured-topic-thumbnail{
+                img.featured-topic-thumbnail{
                     height: 100%;
                     left: 0;
                     -o-object-fit: cover;
