--- a/common/common.scss
+++ b/common/common.scss
@@ -31,7 +31,7 @@
                 right: 0;
                 top: 0;
                 width: 40vw;
-                @media (min-width: 610px){
+                @media (min-width: 768px){
                     width: 250px;
                 }
             }
@@ -49,7 +49,7 @@
                 list-style-type: none;
                 padding: 0;
                 margin: 0;
-                @media (min-width: 610px){
+                @media (min-width: 768px){
                     line-height: 45px;
                 }
                 a[href="#!"] {
@@ -61,7 +61,7 @@
                 a{color: inherit}
 
             }
-            @media (min-width: 610px){
+            @media (min-width: 768px){
                 font-size: 14px;
                 height: 45px;
                 padding: 0 20px;
@@ -69,7 +69,7 @@
         }
         .b-sub__item-0:not(:first-child) {
             margin-left: 5.3333333vw;
-            @media (min-width: 610px){
+            @media (min-width: 768px){
                 margin-left: 32px;
             }
         }
@@ -116,7 +116,7 @@ body:not(.staff) {
         border-bottom: 1px solid $primary-low;
         padding-bottom: 0.5em;
         margin-bottom: 1em;
-        @media (min-width: 610px){
+        @media (min-width: 768px){
             border-bottom: 0;
             margin-bottom: 0;
         }
@@ -126,10 +126,10 @@ body:not(.staff) {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 140px 140px 140px;
-        grid-row-gap: 25px;
-        grid-column-gap: 30px;
+        grid-row-gap: 1rem;
+        grid-column-gap: 1rem;
 
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 768px) {
             grid-template-columns: 1fr;
             grid-template-rows: auto;
             grid-row-gap: 10px;
@@ -150,7 +150,6 @@ body:not(.staff) {
 
             @media screen and (min-width: 650px) {
                 &:first-of-type:not(:last-of-type) {
-                    border-radius: 12px;
                     min-height: 472px;
                     line-height: 24px;
                     grid-row: 1 /span 3;
@@ -180,7 +179,7 @@ body:not(.staff) {
                 &:last-of-type:not(:first-of-type) {}
             }
 
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 768px) {
                 width: 100%;
                 border-radius: 0;
 
@@ -226,7 +225,7 @@ body:not(.staff) {
                     @media screen and (max-width: 450px) {}
                 }
 
-                @media screen and (max-width: 600px) {
+                @media screen and (max-width: 768px) {
                     padding: 10px 15px 0 15px;
                 }
 
@@ -254,7 +253,7 @@ body:not(.staff) {
                     height: 100%;
                 }
 
-                @media screen and (max-width: 600px) {
+                @media screen and (max-width: 768px) {
                     -webkit-box-flex: 0;
                     -ms-flex: 0 0 33.333333%;
                     flex: 0 0 33.333333%;
@@ -501,7 +500,7 @@ img.dt-lazy-loaded {
     }
 }
 
-@media (min-width: 610px) {
+@media (min-width: 768px) {
 
     .b-grid {
         display: grid;
