--- a/common/common.scss
+++ b/common/common.scss
@@ -9,9 +9,11 @@
     background-color: #F5F5F5;
 }
 .category-homepage-wrapper{
-    padding-top: 4em;
     padding-bottom: 1em;
     background-color: #F5F5F5;
+    @media screen and (min-width: 768px) {
+        padding-top: 4em;
+    }
     .category-wapper {
         margin: 0px auto;
         .b-sub {
