--- a/common/common.scss
+++ b/common/common.scss
@@ -19,8 +19,8 @@
         .b-sub {
             background: #fff;
             color: #252a2e;
-            font-size: 3.6vw;
-            height: 12vw;
+            font-size: 3vw;
+            height: 10vw;
             overflow: hidden;
             padding: 0 4vw;
             position: relative;
@@ -45,7 +45,7 @@
                 display: flex;
                 font-weight: 700;
                 height: 200%;
-                line-height: 12vw;
+                line-height: 10vw;
                 text-transform: uppercase;
                 white-space: nowrap;
                 list-style-type: none;
@@ -312,7 +312,7 @@ img.dt-lazy-loaded {
     display: flex;
     flex-direction: column;
     flex: 1;
-    font-size: 3.6vw;
+    font-size: 3vw;
     padding: 2.9333333vw 4vw 1.6vw;
 
     a {
@@ -410,7 +410,8 @@ img.dt-lazy-loaded {
     align-items: flex-end;
     display: flex;
     flex: 1;
-    font-weight: 700;
+    font-size: 0.9rem;
+    font-weight: 400;
     line-height: 1.2592593;
     margin-top: 1.4074074em;
     opacity: .4;
