--- a/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
+++ b/javascripts/homepage-featured-topics/connectors/below-site-header/homepage-featured-topics.hbs
@@ -56,7 +56,7 @@
             <div class="b-grid b-page__grid">
               <div class="b-grid b-grid__cols2">
                 {{#each customLatestTopicsLeft as |t|}}
-                <div data-index="{{@index}}" class="b-brief b-grid__brief  b-grid__cols2  b-grid__rows4" style="color: #3c508a;">
+                <div data-index="{{@index}}" class="b-brief b-grid__brief  b-grid__cols2  b-grid__rows4">
                   <div class="b-meta b-brief__meta is-color">
                     <h3 class="b-meta__title b-brief__hot dt-clamp dt-clamp-3">{{topic-link t}}</h3>
                     <div class="b-meta__text dt-clamp dt-clamp-3">{{raw "list/topic-excerpt" topic=t}}</div>
